<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_centerHorizontal="true"
        android:layout_width="220dp"
        android:layout_height="220dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/blue_logo" />

    <TextView
        android:id="@+id/simpleTextView"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="220dp"
        android:text="@string/homeguard"
        android:textSize="60sp"
        android:fontFamily="@font/sonny_gothic_bold"
        android:textColor="@color/black" >

    </TextView>

    <EditText
        android:singleLine="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/register_new_email"
        android:id="@+id/email"
        android:fontFamily="@font/montserrat_medium"
        android:layout_marginTop="400dp"/>

    <EditText
        android:singleLine="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_new_password"
        android:id="@+id/password"
        android:layout_below="@+id/email"
        android:fontFamily="@font/sonny_gothic_book"
        android:layout_marginTop="10dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/password"
        android:text="@string/register"
        android:fontFamily="@font/sonny_gothic_book"
        android:id="@+id/register"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/check_user"
        android:layout_below="@+id/register"
        android:textColor="#818285"
        android:textSize="11sp"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/sonny_gothic_book"
        android:id="@+id/askuserloginatregister"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:layout_below="@+id/askuserloginatregister"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/sonny_gothic_book"
        android:id="@+id/loginatregister"/>




</RelativeLayout>